--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,8 +9,14 @@ on:
       - published
 
 jobs:
+  tests:
+    uses: ./.github/workflows/tests.yml
+    if: github.event_name == 'push'
+
   build-and-publish:
     runs-on: ubuntu-latest
+    needs: tests
+    if: github.event_name == 'release' || needs.tests.result == 'success'
     permissions:
       contents: read
       packages: write
