--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,11 @@ name: tests
 
 on:
   pull_request:
-  push:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      python-version:
+        type: string
+        default: "3.12"
 
 jobs:
   integration:
@@ -16,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: ${{ inputs.python-version || '3.12' }}
 
       - name: Install dependencies
         run: |
