--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
       - "${PROXY_PORT:-8080}:8080"
       - "${HEALTH_PORT:-8082}:8082"
     environment:
-      - PASSAGE_ALLOW_POLICY_HEADER=${PASSAGE_ALLOW_POLICY_HEADER:-}
-      - PASSAGE_HEALTH_PORT=8082
-      - PASSAGE_HEALTH_HOST=0.0.0.0
+      - PASSSAGE_ALLOW_POLICY_HEADER=${PASSSAGE_ALLOW_POLICY_HEADER:-}
+      - PASSSAGE_HEALTH_PORT=8082
+      - PASSSAGE_HEALTH_HOST=0.0.0.0
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
