--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "click>=8.0",
     "flask>=2.0",
     "mitmproxy~=12.2",
+    "pyarrow",
     "pytz>=2023.0",
     "requests>=2.28",
     "werkzeug>=2.0",
@@ -49,6 +50,13 @@ dev = [
     "ruff>=0.1",
     "build>=1.0",
     "twine>=4.0",
+]
+ui = [
+    "s3fs",
+    "textual",
+]
+all = [
+    "passsage[ui,dev]",
 ]
 
 [project.scripts]
