--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,11 +6,16 @@ on:
     inputs:
       python-version:
         type: string
-        default: "3.12"
+        default: ""
 
 jobs:
   integration:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ${{ fromJson(inputs.python-version != '' && format('["{0}"]', inputs.python-version) || '["3.10", "3.11", "3.12", "3.13", "3.14"]') }}
+    name: test (py${{ matrix.python-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ inputs.python-version || '3.12' }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
