--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ${{ fromJson(inputs.python-version != '' && format('["{0}"]', inputs.python-version) || '["3.10", "3.11", "3.12", "3.13", "3.14"]') }}
+        python-version: ${{ fromJson(inputs.python-version != '' && format('["{0}"]', inputs.python-version) || '["3.12", "3.13", "3.14"]') }}
     name: test (py${{ matrix.python-version }})
     steps:
       - name: Checkout
