--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "boto3>=1.26",
     "cachetools>=5.0",
     "click>=8.0",
+    "pymemcache>=4.0",
     "flask>=2.0",
     "mitmproxy~=12.2",
     "pyarrow",
