--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - "${HEALTH_PORT:-8082}:8082"
     environment:
       - PASSSAGE_ALLOW_POLICY_HEADER=${PASSSAGE_ALLOW_POLICY_HEADER:-}
+      - PASSSAGE_CACHE_REDIRECT=${PASSSAGE_CACHE_REDIRECT:-}
+      - PASSSAGE_S3_PROXY_URL=${PASSSAGE_S3_PROXY_URL:-}
       - PASSSAGE_HEALTH_PORT=8082
       - PASSSAGE_HEALTH_HOST=0.0.0.0
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
