--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
           PASSSAGE_ALLOW_POLICY_HEADER: "1"
           PASSSAGE_DEBUG_PROXY: "1"
           PASSSAGE_CACHE_REDIRECT: ${{ matrix.cache-redirect && '1' || '' }}
-          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localhost:4566/proxy-cache' || '' }}
+          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localstack:4566/proxy-cache' || '' }}
         run: |
           docker compose up -d --build --wait
           docker compose ps
@@ -49,7 +49,7 @@ jobs:
           PASSSAGE_TEST_SERVER_BIND_HOST: 0.0.0.0
           PASSSAGE_TEST_SERVER_HOST: host.docker.internal
           PASSSAGE_CACHE_REDIRECT: ${{ matrix.cache-redirect && '1' || '' }}
-          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localhost:4566/proxy-cache' || '' }}
+          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localstack:4566/proxy-cache' || '' }}
         run: |
           pytest -m "not slow"
 
