remove complexity, use mount-s3

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,8 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ${{ fromJson(inputs.python-version != '' && format('["{0}"]', inputs.python-version) || '["3.12", "3.13", "3.14"]') }}
-        cache-redirect: [false, true]
-    name: test (py${{ matrix.python-version }}, redirect=${{ matrix.cache-redirect }})
+    name: test (py${{ matrix.python-version }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,14 +32,37 @@ jobs:
         run: |
           uv pip install --system -e ".[dev]"
 
-      - name: Start proxy stack
+      - name: Install s3fs
+        run: |
+          sudo apt-get update -q
+          sudo apt-get install -y -q s3fs
+
+      - name: Build images
+        run: docker compose build
+
+      - name: Start localstack
+        run: |
+          docker compose up -d localstack --wait
+          docker compose ps
+
+      - name: Mount S3 bucket via s3fs
+        run: |
+          sudo mkdir -p /tmp/passsage-s3mount
+          echo "test:test" | sudo tee /tmp/.passwd-s3fs > /dev/null
+          sudo chmod 600 /tmp/.passwd-s3fs
+          sudo s3fs proxy-cache /tmp/passsage-s3mount \
+            -o passwd_file=/tmp/.passwd-s3fs \
+            -o url=http://localhost:4566 \
+            -o use_path_request_style \
+            -o allow_other
+          ls /tmp/passsage-s3mount/
+
+      - name: Start passsage
         env:
           PASSSAGE_ALLOW_POLICY_HEADER: "1"
           PASSSAGE_DEBUG_PROXY: "1"
-          PASSSAGE_CACHE_REDIRECT: ${{ matrix.cache-redirect && '1' || '' }}
-          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localstack:4566/proxy-cache' || '' }}
         run: |
-          docker compose up -d --build --wait
+          docker compose up -d passsage --wait
           docker compose ps
 
       - name: Run tests
@@ -48,8 +70,6 @@ jobs:
           PROXY_URL: http://localhost:8080
           PASSSAGE_TEST_SERVER_BIND_HOST: 0.0.0.0
           PASSSAGE_TEST_SERVER_HOST: host.docker.internal
-          PASSSAGE_CACHE_REDIRECT: ${{ matrix.cache-redirect && '1' || '' }}
-          PASSSAGE_S3_PROXY_URL: ${{ matrix.cache-redirect && 'http://localstack:4566/proxy-cache' || '' }}
         run: |
           pytest -m "not slow"
 
