--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - "${HEALTH_PORT:-8082}:8082"
     environment:
       - PASSSAGE_ALLOW_POLICY_HEADER=${PASSSAGE_ALLOW_POLICY_HEADER:-}
-      - PASSSAGE_CACHE_REDIRECT=${PASSSAGE_CACHE_REDIRECT:-}
-      - PASSSAGE_S3_PROXY_URL=${PASSSAGE_S3_PROXY_URL:-}
+      - PASSSAGE_DEBUG_PROXY=${PASSSAGE_DEBUG_PROXY:-}
+      - PASSSAGE_MOUNT_S3_PATH=/s3mount
       - PASSSAGE_HEALTH_PORT=8082
       - PASSSAGE_HEALTH_HOST=0.0.0.0
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
@@ -33,6 +33,8 @@ services:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
       - S3_ENDPOINT_URL=http://localstack:4566
       - S3_BUCKET=proxy-cache
+    volumes:
+      - ${S3_MOUNT_HOST_PATH:-/tmp/passsage-s3mount}:/s3mount:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
