--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,26 @@ services:
       timeout: 5s
       retries: 10
 
-  passsage:
+  passsage-base:
+    image: passsage:base
     build:
       context: .
       dockerfile: Dockerfile
+    profiles: ["build"]
+
+  passsage:
+    build:
+      context: .
+      dockerfile: Dockerfile.test
     ports:
       - "${PROXY_PORT:-8080}:8080"
       - "${HEALTH_PORT:-8082}:8082"
+    privileged: true
     environment:
       - PASSSAGE_ALLOW_POLICY_HEADER=${PASSSAGE_ALLOW_POLICY_HEADER:-}
       - PASSSAGE_DEBUG_PROXY=${PASSSAGE_DEBUG_PROXY:-}
       - PASSSAGE_MOUNT_S3_PATH=/s3mount
+      - PASSSAGE_S3FS_MOUNT=1
       - PASSSAGE_HEALTH_PORT=8082
       - PASSSAGE_HEALTH_HOST=0.0.0.0
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
@@ -33,14 +42,11 @@ services:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
       - S3_ENDPOINT_URL=http://localstack:4566
       - S3_BUCKET=proxy-cache
-    volumes:
-      - ${S3_MOUNT_HOST_PATH:-/tmp/passsage-s3mount}:/s3mount:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
       localstack:
         condition: service_healthy
-    # Uses the image defaults; override with `docker compose run passsage -- <args>`
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8082/health"]
       interval: 5s
