--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  pull_request:
   release:
     types:
       - published
@@ -18,7 +19,7 @@ env:
 jobs:
   tests:
     uses: ./.github/workflows/tests.yml
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
 
   build:
     runs-on: ubuntu-latest
@@ -118,6 +119,7 @@ jobs:
           tags: |
             type=raw,value=latest,enable=${{ github.event_name == 'push' }}
             type=sha,format=long,enable=${{ github.event_name == 'push' }}
+            type=ref,event=pr
             type=semver,pattern={{version}},enable=${{ github.event_name == 'release' }}
             type=semver,pattern={{major}}.{{minor}},enable=${{ github.event_name == 'release' }}
             type=sha,format=short
