--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,23 @@ services:
       timeout: 5s
       retries: 10
 
+  xs3lerator:
+    image: ghcr.io/bra-fsn/xs3lerator:latest
+    ports:
+      - "${XS3_PORT:-8888}:8080"
+    environment:
+      - XS3_S3_ENDPOINT_URL=http://localstack:4566
+      - XS3_S3_FORCE_PATH_STYLE=true
+      - XS3_UPSTREAM_TLS_SKIP_VERIFY=true
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    depends_on:
+      localstack:
+        condition: service_healthy
+
   passsage:
     build:
       context: .
@@ -25,7 +42,8 @@ services:
     environment:
       - PASSSAGE_ALLOW_POLICY_HEADER=${PASSSAGE_ALLOW_POLICY_HEADER:-}
       - PASSSAGE_DEBUG_PROXY=${PASSSAGE_DEBUG_PROXY:-}
-      - PASSSAGE_OBJECT_STORE_URL=http://localstack:4566/proxy-cache
+      - PASSSAGE_XS3LERATOR_URL=http://xs3lerator:8080
+      - PASSSAGE_S3_HASH_PREFIX_DEPTH=4
       - PASSSAGE_HEALTH_PORT=8082
       - PASSSAGE_HEALTH_HOST=0.0.0.0
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
@@ -38,6 +56,8 @@ services:
     depends_on:
       localstack:
         condition: service_healthy
+      xs3lerator:
+        condition: service_started
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8082/health"]
       interval: 5s
