--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,12 @@ on:
         type: string
         default: ""
 
-permissions:
-  contents: read
-  packages: read
-
 jobs:
   integration:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
     strategy:
       fail-fast: false
       matrix:
@@ -33,6 +32,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
+        with:
+          github-token: ${{ github.token }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
