--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,9 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
+# mount-s3 bind mount data
+.data/
+
 # Marimo
 marimo/_static/
 marimo/_lsp/
