--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,25 +29,70 @@ services:
       timeout: 5s
       retries: 15
 
+  mount-s3:
+    build:
+      context: ./docker
+      dockerfile: Dockerfile.mount-s3
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - apparmor:unconfined
+    devices:
+      - /dev/fuse
+    entrypoint: ["/bin/sh", "/entrypoint.sh"]
+    volumes:
+      - ./docker/mount-s3-entrypoint.sh:/entrypoint.sh:ro
+      - type: bind
+        source: ./.data
+        target: /mnt/shared
+        bind:
+          propagation: rshared
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
+      - MOUNT_S3_BUCKET=proxy-cache
+      - MOUNT_S3_MOUNTPOINT=/mnt/shared/bucket
+      - MOUNT_S3_ENDPOINT=http://localstack:4566
+      - MOUNT_UID=65534
+      - MOUNT_GID=65534
+    depends_on:
+      localstack:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "ls /mnt/shared/bucket 2>/dev/null || mount | grep -q /mnt/shared/bucket"]
+      interval: 3s
+      timeout: 3s
+      retries: 15
+      start_period: 5s
+
   xs3lerator:
     image: ghcr.io/bra-fsn/xs3lerator:latest
     ports:
       - "${XS3_PORT:-8888}:8080"
     environment:
-      - XS3_S3_ENDPOINT_URL=http://localstack:4566
-      - XS3_S3_FORCE_PATH_STYLE=true
+      - XS3_DATA_DIR=/mnt/shared/bucket
+      - XS3_CHUNK_SIZE=5MiB
       - XS3_UPSTREAM_TLS_SKIP_VERIFY=true
       - XS3_ELASTICSEARCH_URL=http://elasticsearch:9200
       - XS3_ELASTICSEARCH_MANIFEST_INDEX=xs3_manifests
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-west-2}
+    volumes:
+      - type: bind
+        source: ./.data
+        target: /mnt/shared
+        bind:
+          propagation: rshared
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
       localstack:
         condition: service_healthy
       elasticsearch:
+        condition: service_healthy
+      mount-s3:
         condition: service_healthy
 
   passsage:
