--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
     ports:
       - "${XS3_PORT:-8888}:8080"
     environment:
+      - RUST_LOG=${RUST_LOG:-debug}
       - XS3_DATA_DIR=/mnt/shared/bucket
       - XS3_UPSTREAM_TLS_SKIP_VERIFY=true
       - XS3_ELASTICSEARCH_URL=http://elasticsearch:9200
