--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,31 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build passsage image (cached)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          dockerfile: Dockerfile
+          load: true
+          tags: passsage_passsage:latest
+          cache-from: type=gha,scope=compose
+          cache-to: type=gha,scope=compose,mode=max
+          platforms: linux/amd64
+
+      - name: Build mount-s3 image (cached)
+        uses: docker/build-push-action@v6
+        with:
+          context: ./docker
+          file: Dockerfile.mount-s3
+          load: true
+          tags: passsage_mount-s3:latest
+          cache-from: type=gha,scope=compose-mount-s3
+          cache-to: type=gha,scope=compose-mount-s3,mode=max
+          platforms: linux/amd64
+
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
@@ -51,7 +76,7 @@ jobs:
           RUST_LOG: "debug"
         run: |
           mkdir -p .data
-          docker compose up -d --build --wait
+          docker compose up -d --wait
           docker compose ps
           docker compose logs xs3lerator
 
